--- a/client/index.html
+++ b/client/index.html
@@ -5,10 +5,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Thanos Snap</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Thanos Snap</h1>
+  <header>
+    <img src="https://i.annihil.us/u/prod/marvel/i/mg/6/40/5274137e3e2cd/standard_medium.jpg" alt="Thanos">
+  </header>
 
+  <main class="characters">
+
+  </main>
   <script src="app.js"></script>
 </body>
 </html>
