--- a/client/index.html
+++ b/client/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <header>
-    <img src="https://i.annihil.us/u/prod/marvel/i/mg/6/40/5274137e3e2cd/standard_medium.jpg" alt="Thanos">
+    <img id="thanos" src="https://i.annihil.us/u/prod/marvel/i/mg/6/40/5274137e3e2cd/standard_medium.jpg" alt="Thanos">
   </header>
 
   <main class="characters">
