Refactor some code

--- a/client/index.html
+++ b/client/index.html
@@ -10,6 +10,7 @@
 <body>
   <header>
     <img id="thanos" src="https://i.annihil.us/u/prod/marvel/i/mg/6/40/5274137e3e2cd/standard_medium.jpg" alt="Thanos">
+    <h3 id="balance">Balance Has Been Restored In The Universe....</h3>
   </header>
 
   <main class="characters">
